mikec/tests/PASS/semantic/89.mc
void main(){
	int a = 0;
}

void func1(int a){
	a = 0;
	
}
