mikec/tests/FAIL/semantic/test-multi-func1.mc
void main(){
	int a = 0;
	return;
}

void func1(int a){
	a = 0;
	return;
	
}
